value update.html

--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -86,8 +86,9 @@
         function getData() {
         var username = document.getElementById("username").value;
         var password = document.getElementById("password").value;
-        console.log("Username:", textContent1);
-        console.log("Password:", textContent2);
+    
+        console.log("Username:", username);
+        console.log("Password:", password);
         }
         </script>
 </body>
